--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-family: 'Proxima Nova', Georgia, sans-serif; }
 
 #home {
   width: 100%;
-  height: 1vh;
+  height: 100vh;
   background: #000; }
 
 /*# sourceMappingURL=style.css.map */
