--- a/css/style.css
+++ b/css/style.css
@@ -7,5 +7,7 @@ body {
   width: 100%;
   height: 100vh;
   background: #000; }
+  #home .head {
+    color: white; }
 
 /*# sourceMappingURL=style.css.map */
