--- a/css/style.scss
+++ b/css/style.scss
@@ -2,12 +2,14 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Proxima Nova', Georgia, sans-serif;
+
 }
 #home{
     width: 100%;
     height: 100vh;
     background: #000;
     .head{
-
+        color: white;
     }
 }
+
