--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,48 @@
 @font-face {
   font-family: 'Proxima Nova';
-  src: url(fonts/ProximaNova-Reg.otf); }
+  src: url(../fonts/ProximaNova-Reg.otf); }
 @font-face {
   font-family: 'Proxima Nova Black';
-  src: url(fonts/ProximaNova-Black.otf); }
+  src: url(../fonts/ProximaNova-Black.otf); }
 @font-face {
   font-family: 'Proxima Nova Bold';
-  src: url(fonts/ProximaNova-Bold.otf); }
+  src: url(../fonts/ProximaNova-Bold.otf); }
 @font-face {
   font-family: 'Proxima Nova Light';
-  src: url(fonts/ProximaNova-Light.otf); }
+  src: url(../fonts/ProximaNova-Light.otf); }
+@font-face {
+  font-family: 'Proxima Nova Thin';
+  src: url(../fonts/ProximaNova-Thin.otf); }
 @font-face {
   font-family: 'Proxima Nova Xbold';
-  src: url(fonts/ProximaNova-Xbold.otf); }
+  src: url(../fonts/ProximaNova-Xbold.otf); }
+.video-bg {
+  background: #000;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -99; }
+
+.video-fg,
+.video-bg iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  opacity: 0.6; }
+
+@media (min-aspect-ratio: 16 / 9) {
+  .video-fg {
+    height: 300%;
+    top: -100%; } }
+@media (max-aspect-ratio: 16 / 9) {
+  .video-bg {
+    width: 300%;
+    left: -100%; } }
 body {
   margin: 0;
   padding: 0;
@@ -21,33 +51,18 @@ body {
 #home {
   width: 100%;
   height: 100vh;
-  background: #000; }
+  background: url(../img/geometry.png) center no-repeat;
+  position: relative; }
   #home .head {
-    color: white; }
-  #home .video-bg {
-    background: #000;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -99; }
-  #home .video-fg,
-  #home .video-bg iframe {
+    color: white;
+    text-transform: uppercase;
+    font: 45pt 'Proxima Nova Thin';
+    letter-spacing: 0.12em;
+    text-align: center;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    opacity: 0.6; }
-  @media (min-aspect-ratio: 16 / 9) {
-    #home .video-fg {
-      height: 300%;
-      top: -100%; } }
-  @media (max-aspect-ratio: 16 / 9) {
-    #home .video-bg {
-      width: 300%;
-      left: -100%; } }
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: -25px; }
 
 /*# sourceMappingURL=style.css.map */
