--- a/css/style.scss
+++ b/css/style.scss
@@ -1,69 +1,27 @@
- @font-face {
-    font-family: 'Proxima Nova';
-    src: url(fonts/ProximaNova-Reg.otf);
-   }
- @font-face {
-    font-family: 'Proxima Nova Black';
-    src: url(fonts/ProximaNova-Black.otf);
-   }
- @font-face {
-    font-family: 'Proxima Nova Bold';
-    src: url(fonts/ProximaNova-Bold.otf);
-   }
- @font-face {
-    font-family: 'Proxima Nova Light';
-    src: url(fonts/ProximaNova-Light.otf);
-   }
- @font-face {
-    font-family: 'Proxima Nova Xbold';
-    src: url(fonts/ProximaNova-Xbold.otf);
-   }
-body{
+@import 'fonts';
+@import 'video';
+body {
     margin: 0;
     padding: 0;
     font-family: 'Proxima Nova', Georgia, sans-serif;
-
 }
-#home{
+
+#home {
     width: 100%;
     height: 100vh;
-    background: #000;
-    .head{
+    background: url(../img/geometry.png) center no-repeat;
+    position: relative;
+    .head {
         color: white;
-    }
-    .video-bg {
-        background: #000;
-        position: fixed;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        z-index: -99;
-    }
-
-    .video-fg,
-    .video-bg iframe {
+        text-transform: uppercase;
+        font: 45pt 'Proxima Nova Thin';
+        letter-spacing: 0.12em;
+        text-align: center;
         position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
-        opacity: 0.6;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        margin-top: -25px;
     }
-
-    @media (min-aspect-ratio: 16/9) {
-        .video-fg {
-            height: 300%;
-            top: -100%;
-        }
-    }
-
-    @media (max-aspect-ratio: 16/9) {
-        .video-bg {
-            width: 300%;
-            left: -100%;
-        }
-    }
+    span {}
 }
-
