--- a/css/style.css
+++ b/css/style.css
@@ -16,53 +16,115 @@
 @font-face {
   font-family: 'Proxima Nova Xbold';
   src: url(../fonts/ProximaNova-Xbold.otf); }
-.video-bg {
-  background: #000;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -99; }
+body {
+  -webkit-font-smoothing: subpixel-antialiased !important;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden; }
 
-.video-fg,
-.video-bg iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  opacity: 0.6; }
-
-@media (min-aspect-ratio: 16 / 9) {
-  .video-fg {
-    height: 300%;
-    top: -100%; } }
-@media (max-aspect-ratio: 16 / 9) {
-  .video-bg {
-    width: 300%;
-    left: -100%; } }
 body {
   margin: 0;
   padding: 0;
   font-family: 'Proxima Nova', Georgia, sans-serif; }
 
+h2 {
+  text-transform: uppercase;
+  font: 36px 'Proxima Nova Bold';
+  color: #727272;
+  margin: 0; }
+
+.wrap {
+  width: 940px;
+  margin: 0 auto; }
+
+.button {
+  border-radius: 3px;
+  background-color: #4c75a3;
+  box-shadow: inset 0px -3px 0px 0px rgba(0, 0, 0, 0.49);
+  width: 298px;
+  height: 60px;
+  text-align: center;
+  color: #fff;
+  font-size: 18px;
+  letter-spacing: 0.02em;
+  font-family: 'Proxima Nova';
+  line-height: 60px;
+  text-transform: none;
+  cursor: pointer;
+  transition: all .5s ease-in-out;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+  .button:hover {
+    background: #5882b1;
+    box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.35), inset 0px -3px 0px 0px rgba(0, 0, 0, 0.49); }
+
 #home {
   width: 100%;
   height: 100vh;
-  background: url(../img/geometry.png) center no-repeat;
-  position: relative; }
+  background: rgba(0, 0, 0, 0.7) url(../img/geometry.png) center no-repeat;
+  position: relative;
+  overflow: hidden; }
   #home .head {
     color: white;
     text-transform: uppercase;
     font: 45pt 'Proxima Nova Thin';
     letter-spacing: 0.12em;
-    text-align: center;
+    text-align: center; }
+  #home span {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     margin-top: -25px; }
+  #home .button {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 110px; }
+  #home .scroll-go {
+    background: url(../img/scroll.png) center no-repeat;
+    width: 30px;
+    height: 59px;
+    position: absolute;
+    left: 50%;
+    margin-left: -15px;
+    top: 100%;
+    margin-top: -79px;
+    animation: scroll-go 2s infinite ease-in-out; }
+  #home iframe {
+    position: absolute;
+    min-height: 100%;
+    min-width: 100%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -100; }
+  @media (min-aspect-ratio: 16 / 9) {
+    #home iframe {
+      height: 300%;
+      top: -100%; } }
+  @media (max-aspect-ratio: 16 / 9) {
+    #home iframe {
+      width: 300%;
+      left: -100%; } }
+
+#about {
+  padding-top: 100px;
+  background: #fff;
+  color: #727272; }
+  #about .about-left, #about .about-right {
+    display: inline-block;
+    vertical-align: top; }
+  #about p {
+    font: 16px/25px 'Proxima Nova Thin';
+    width: 536px;
+    margin: 0; }
+  #about .about-right {
+    background: url(../img/girl.png) center no-repeat;
+    width: 374px;
+    height: 409px; }
 
 /*# sourceMappingURL=style.css.map */
