--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,8 @@ h2 {
   text-transform: uppercase;
   font: 36px 'Proxima Nova Bold';
   color: #727272;
-  margin: 0; }
+  margin: 0;
+  margin-bottom: 34px; }
 
 .wrap {
   width: 940px;
