--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,7 @@ h2 {
     font: 36px 'Proxima Nova Bold';
     color: #727272;
     margin: 0;
+    margin-bottom: 34px;
 }
 .wrap{
     width: 940px;
