--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,11 @@ h2 {
   margin: 0;
   margin-bottom: 34px; }
 
+h2 span {
+  font: 12px 'Proxima Nova Thin';
+  vertical-align: middle;
+  text-transform: lowercase; }
+
 .wrap {
   width: 940px;
   margin: 0 auto; }
@@ -127,6 +132,10 @@ h2 {
   #about .about-right {
     background: url(../img/girl.png) center no-repeat;
     width: 374px;
-    height: 409px; }
+    height: 409px;
+    float: right; }
+
+#music {
+  margin-top: 112px; }
 
 /*# sourceMappingURL=style.css.map */
