--- a/css/style.scss
+++ b/css/style.scss
@@ -177,6 +177,7 @@ h2 span {
             animation: fadeOutUp .2s;
         }
         &:hover {
+            box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.35);
             & img {
                 opacity: 0.8;
             }
@@ -214,6 +215,7 @@ h2 span {
                 }
             }
             &:hover {
+                box-shadow: 2px 13px 50px 0px rgba(0, 0, 0, 0.35);
                 & .song-info {
                     animation: none;
                 }
@@ -243,6 +245,111 @@ h2 span {
         }
         &.active {
             background: #727272;
+        }
+    }
+}
+
+#features {
+    background: url(../img/bg-f.png) top center no-repeat;
+    width: 100%;
+    height: 910px;
+    margin-top: -188px;
+    box-sizing: border-box;
+    padding-top: 321px;
+    & h2 {
+        color: #333333;
+        margin-bottom: 84px;
+    }
+    .f-slider {
+        width: 485px;
+        text-align: center;
+        color: #333333;
+        position: relative;
+    }
+    .f-img {
+        width: 186px;
+        height: 186px;
+        margin: 0 auto;
+        border: 5px solid #333;
+        position: relative;
+        img {
+            display: block;
+            margin: auto;
+            position: absolute;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            right: 0;
+        }
+    }
+    .f-text {
+        width: 224px;
+        margin: 0 auto;
+        margin-top: 10px;
+        .f-head {
+            font: 30px/27px 'Proxima Nova Bold';
+            text-transform: uppercase;
+            letter-spacing: 0.02em;
+        }
+        .f-desc {
+            font: 14px/22px 'Proxima Nova Thin';
+            letter-spacing: 0.02em;
+        }
+    }
+    .f-pag {
+        width: 323px;
+        position: absolute;
+        left: 50%;
+        margin-left: -161.5px;
+        top: 68.25px;
+    }
+    .f-right {
+        background: url(../img/right.png) center no-repeat;
+        width: 17px;
+        height: 41px;
+        float: right;
+        cursor: pointer;
+    }
+    .f-left {
+        background: url(../img/left.png) center no-repeat;
+        width: 17px;
+        height: 41px;
+        float: left;
+        cursor: pointer;
+    }
+}
+
+#howtostart {
+    margin-top: 91px;
+
+    .button{
+        margin: 0 auto;
+    }
+}
+
+#footer {
+    background: url(../img/footer.png) top center no-repeat;
+    width: 100%;
+    height: 369px;
+    padding-top: 110px;
+    box-sizing: border-box;
+    text-align: center;
+    .f-column {
+        width: 293px;
+        height: 210px;
+        display: inline-block;
+        vertical-align: top;
+        color: #fff;
+        font-size: 16px;
+        line-height: 27px;
+        text-align: left;
+        a {
+            display: block;
+            color: inherit;
+            text-decoration: none;
+        }
+        &:nth-child(2){
+            margin: 0 25px;
         }
     }
 }
