--- a/css/style.css
+++ b/css/style.css
@@ -295,9 +295,42 @@ h2 span {
     cursor: pointer; }
 
 #howtostart {
+  color: #727272;
   margin-top: 91px; }
   #howtostart .button {
-    margin: 0 auto; }
+    margin: 0 auto;
+    margin-top: 34px; }
+  #howtostart .steps {
+    text-align: center; }
+  #howtostart .s-column {
+    text-align: left;
+    width: 228px;
+    display: inline-block;
+    vertical-align: top; }
+    #howtostart .s-column:nth-child(2) {
+      margin: 0 123px; }
+  #howtostart .s-num {
+    text-align: center;
+    width: 33px;
+    padding: 5px 0;
+    border-radius: 100%;
+    border: 1px solid #727272;
+    line-height: 33px;
+    font: 18px 'Proxima Nova Light';
+    display: inline-block;
+    vertical-align: top; }
+  #howtostart .s-head {
+    margin-left: 15px;
+    text-transform: uppercase;
+    font-size: 24px;
+    color: #727272;
+    display: inline-block;
+    vertical-align: top;
+    line-height: 35px; }
+  #howtostart .s-desc {
+    font-size: 14px;
+    color: #727272;
+    margin-top: 28px; }
 
 #footer {
   background: url(../img/footer.png) top center no-repeat;
