--- a/css/style.scss
+++ b/css/style.scss
@@ -322,26 +322,42 @@ h2 span {
 #howtostart {
     color: #727272;
     margin-top: 91px;
-
-    .button{
+    .button {
         margin: 0 auto;
         margin-top: 34px;
     }
-
-    .steps{
+    .steps {
         text-align: center;
     }
-    .s-column{
+    .s-column {
         text-align: left;
         width: 228px;
         display: inline-block;
         vertical-align: top;
-
-        &:nth-child(2){
+        position: relative;
+        &:nth-child(2) {
             margin: 0 123px;
+            &:before {
+                content: ' ';
+                position: absolute;
+                width: 50%;
+                height: 1px;
+                background: rgba(114, 114, 114, 0.33);
+                top: 17px;
+                left: -121px;
+            }
+            &:after {
+                content: ' ';
+                position: absolute;
+                width: 59%;
+                height: 1px;
+                background: rgba(114, 114, 114, 0.33);
+                top: 17px;
+                right: -121px;
+            }
         }
     }
-    .s-num{
+    .s-num {
         text-align: center;
         width: 33px;
         padding: 5px 0;
@@ -352,7 +368,7 @@ h2 span {
         display: inline-block;
         vertical-align: top;
     }
-    .s-head{
+    .s-head {
         margin-left: 15px;
         text-transform: uppercase;
         font-size: 24px;
@@ -361,7 +377,7 @@ h2 span {
         vertical-align: top;
         line-height: 35px;
     }
-    .s-desc{
+    .s-desc {
         font-size: 14px;
         color: #727272;
         margin-top: 28px;
@@ -389,7 +405,7 @@ h2 span {
             color: inherit;
             text-decoration: none;
         }
-        &:nth-child(2){
+        &:nth-child(2) {
             margin: 0 25px;
         }
     }
