--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,13 @@ body {
   -moz-backface-visibility: hidden;
   -ms-backface-visibility: hidden; }
 
+@keyframes cursor-go {
+  0% {
+    margin-top: -69px; }
+  50% {
+    margin-top: -79px; }
+  100% {
+    margin-top: -69px; } }
 body {
   margin: 0;
   padding: 0;
@@ -47,7 +54,7 @@ h2 span {
 .button {
   border-radius: 3px;
   background-color: #4c75a3;
-  box-shadow: inset 0px -3px 0px 0px rgba(0, 0, 0, 0.49);
+  box-shadow: inset 0px -3px 0px 0px rgba(0, 0, 0, 0.49), 0px 3px 6px rgba(0, 0, 0, 0.3);
   width: 298px;
   height: 60px;
   text-align: center;
@@ -68,8 +75,11 @@ h2 span {
   user-select: none; }
   .button:hover {
     background: #5882b1;
-    box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.35), inset 0px -3px 0px 0px rgba(0, 0, 0, 0.49); }
+    box-shadow: inset 0px -3px 0px 0px rgba(0, 0, 0, 0.49), 0px 10px 13px 0px rgba(0, 0, 0, 0.35); }
 
+@keyframes for-button {
+  100% {
+    transform: scale(1.1); } }
 #home {
   width: 100%;
   height: 100vh;
@@ -106,8 +116,9 @@ h2 span {
     left: 50%;
     margin-left: -15px;
     top: 100%;
+    cursor: pointer;
     margin-top: -79px;
-    animation: scroll-go 2s infinite ease-in-out; }
+    animation: cursor-go 2s infinite ease-in-out; }
   #home iframe {
     position: absolute;
     min-height: 100%;
@@ -245,11 +256,21 @@ h2 span {
   #features h2 {
     color: #333333;
     margin-bottom: 84px; }
+  #features .f-elems {
+    width: 1000%;
+    position: relative;
+    text-align: left;
+    left: 0; }
+  #features .f-elem {
+    display: inline-block;
+    margin-left: 133px;
+    text-align: center; }
   #features .f-slider {
     width: 485px;
     text-align: center;
     color: #333333;
-    position: relative; }
+    position: relative;
+    overflow: hidden; }
   #features .f-img {
     width: 186px;
     height: 186px;
@@ -281,6 +302,13 @@ h2 span {
     left: 50%;
     margin-left: -161.5px;
     top: 68.25px; }
+    #features .f-pag div {
+      transition: all .2s ease-in-out;
+      -webkit-transition: all .2s ease-in-out;
+      -moz-transition: all .2s ease-in-out;
+      -ms-transition: all .2s ease-in-out; }
+    #features .f-pag div:hover {
+      opacity: 0.7; }
   #features .f-right {
     background: url(../img/right.png) center no-repeat;
     width: 17px;
