--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,18 @@
     -ms-transition: all .2s ease-in-out;
 }
 
+@keyframes cursor-go {
+    0% {
+        margin-top: -69px;
+    }
+    50% {
+        margin-top: -79px;
+    }
+    100% {
+        margin-top: -69px;
+    }
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -42,7 +54,7 @@ h2 span {
 .button {
     border-radius: 3px;
     background-color: #4c75a3;
-    box-shadow: inset 0px -3px 0px 0px rgba(0, 0, 0, 0.49);
+    box-shadow: inset 0px -3px 0px 0px rgba(0, 0, 0, 0.49), 0px 3px 6px rgba(0, 0, 0, 0.3);
     width: 298px;
     height: 60px;
     text-align: center;
@@ -56,9 +68,15 @@ h2 span {
     @include transition();
     &:hover {
         background: lighten(#4c75a3, 5%);
-        box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.35), inset 0px -3px 0px 0px rgba(0, 0, 0, 0.49);
+        box-shadow: inset 0px -3px 0px 0px rgba(0, 0, 0, 0.49), 0px 10px 13px 0px rgba(0, 0, 0, 0.35);
     }
     @include select();
+}
+
+@keyframes for-button {
+    100% {
+        transform: scale(1.1);
+    }
 }
 
 #home {
@@ -97,8 +115,9 @@ h2 span {
         left: 50%;
         margin-left: -15px;
         top: 100%;
+        cursor: pointer;
         margin-top: -79px;
-        animation: scroll-go 2s infinite ease-in-out;
+        animation: cursor-go 2s infinite ease-in-out;
     }
     iframe {
         position: absolute;
@@ -260,11 +279,23 @@ h2 span {
         color: #333333;
         margin-bottom: 84px;
     }
+    .f-elems {
+        width: 1000%;
+        position: relative;
+        text-align: left;
+        left: 0;
+    }
+    .f-elem {
+        display: inline-block;
+        margin-left: 133px;
+        text-align: center;
+    }
     .f-slider {
         width: 485px;
         text-align: center;
         color: #333333;
         position: relative;
+        overflow: hidden;
     }
     .f-img {
         width: 186px;
@@ -302,6 +333,12 @@ h2 span {
         left: 50%;
         margin-left: -161.5px;
         top: 68.25px;
+        div {
+            @include transition();
+        }
+        div:hover {
+            opacity: 0.7;
+        }
     }
     .f-right {
         background: url(../img/right.png) center no-repeat;
