fix other thanks

--- a/css/style.css
+++ b/css/style.css
@@ -400,4 +400,6 @@ h2 span {
     #footer .f-column:nth-child(2) {
       margin: 0 25px; }
 
+/*thanks SASS <3*/
+
 /*# sourceMappingURL=style.css.map */
