--- a/css/style.scss
+++ b/css/style.scss
@@ -289,6 +289,7 @@ h2 span {
         display: inline-block;
         margin-left: 133px;
         text-align: center;
+        vertical-align: top;
     }
     .f-slider {
         width: 485px;
@@ -447,4 +448,6 @@ h2 span {
         }
     }
 }
+
+
 /*thanks SASS <3*/
